[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-sequencefield"
description = "Additional field from django taking it's value from a postgresql sequence. It is similar to django AutoField, except that multiple model can share ids from a single sequence.  Also add the possibility to generate an id from a sequence AND from the data of another field in the model"
authors = [
    { name = "Loic Quertenmont", email = "loic@deeperanalytics.be" },
]
keywords = [
    "django",
    "postgresql",
    "sequence",
    "field",
    "autofield",
    "python",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
]
dynamic = ["version"]
maintainers = [
    { name = "Loic Quertenmont", email = "loic@deeperanalytics.be" },
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE.txt"
content-type = "text/plain"

[project.urls]
Homepage = "https://github.com/quertenmont/django-sequencefield"
Download = "https://github.com/quertenmont/django-sequencefield/releases"
Documentation = "https://github.com/quertenmont/django-sequencefield#readme"
Issues = "https://github.com/quertenmont/django-sequencefield/issues"
Funding = "https://github.com/sponsors/quertenmont/"
Twitter = "https://twitter.com/LoicQuertenmont"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.ruff]
ignore = []
line-length = 88
select = ["B", "B9", "C", "E", "F", "W"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "test.settings"

[tool.setuptools.packages.find]
include = ["sequencefield*"]

[tool.setuptools.dynamic.version]
attr = "sequencefield.metadata.__version__"
